[package]
name = "transportation"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal libraries

transportation_api= { path = "transportation_api" }

# External libraries
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"]}
env_logger = "0.10.0"

tokio = { version = "1.14", features = ["full"] }
error-chain = "0.12.4"


#
# Common
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
log = "0.4.0"
mime = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Crates included if required by the API definition


# Common between server and client features
hyper = {version = "0.14", features = ["full"]}
serde_ignored = {version = "0.1.1", optional = true}
url = {version = "2.1", optional = true}

# Client-specific

# Server, and client callback-specific
lazy_static = { version = "1.4"}
percent-encoding = {version = "2.1.0", optional = true}
regex = {version = "1.3", optional = true}

